--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,12 +30,13 @@
                             <div class="ribbon ribbon-1">
                                 <h2 class="sm">WELCOME TO</h2>
                             </div>
-                            <h1 class="sbig text-uppercase">PHỞ SÀI GÒN 52</h1>
+                            <h1 class="sbig text-uppercase"><%= @info.name %></h1>
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
-                            <p class="xmd">Zürcherstrasse 91, 8952 Schlieren, Switzerland</p>
-                            <p class="xmd">043 495 00 22</p>
+                            <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%= @info.email %></p>
+                            <p class="xmd"><%= @info.phone %></p>
                         </div>
                     </div>
                 </li>
@@ -49,12 +50,13 @@
                             <div class="ribbon ribbon-1">
                                 <h2 class="sm">WELCOME TO</h2>
                             </div>
-                            <h1 class="sbig text-uppercase">PHỞ SÀI GÒN 52</h1>
+                            <h1 class="sbig text-uppercase"><%= @info.name %></h1>
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
-                            <p class="xmd">Zürcherstrasse 91, 8952 Schlieren, Switzerland</p>
-                            <p class="xmd">043 495 00 22</p>
+                            <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%= @info.email %></p>
+                            <p class="xmd"><%= @info.phone %></p>
                         </div>
                     </div>
                 </li>
@@ -68,12 +70,13 @@
                             <div class="ribbon ribbon-1">
                                 <h2 class="sm">WELCOME TO</h2>
                             </div>
-                            <h1 class="sbig text-uppercase">PHỞ SÀI GÒN 52</h1>
+                            <h1 class="sbig text-uppercase"><%= @info.name %></h1>
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
-                            <p class="xmd">Zürcherstrasse 91, 8952 Schlieren, Switzerland</p>
-                            <p class="xmd">043 495 00 22</p>
+                            <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%= @info.email %></p>
+                            <p class="xmd"><%= @info.phone %></p>
                         </div>
                     </div>
                 </li>
