--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -48,7 +48,7 @@
                                         <div class="col-lg-12">
                                             <div class="the-menu-item">
                                                 <div class="image-wrap">
-                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160">
+                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
                                                 </div>
                                                 <div class="the-menu-body">
                                                     <h4 class="xsm"><%= item.name_1 %></h4>
@@ -83,7 +83,7 @@
                                         <div class="col-lg-12">
                                             <div class="the-menu-item">
                                                 <div class="image-wrap">
-                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160">
+                                                    <img src="<%= item.image_url.image_product_large if item.image_url? %>" width="160" height="160" class="border-product">
                                                 </div>
                                                 <div class="the-menu-body">
                                                     <h4 class="xsm"><%= item.name_1 %></h4>
