--- a/app/views/admin/main/_navbar.html.erb
+++ b/app/views/admin/main/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse">
     <div class="navbar-header">
-        <a class="navbar-brand"><img src="/backend/assets/images/logo_light.png" alt=""></a>
+        <%= link_to image_tag("/backend/assets/images/logo_light.png"), {controller: "main", action: "index"}, {class: "navbar-brand"} %>
 
         <ul class="nav navbar-nav visible-xs-block">
             <li><a data-toggle="collapse" data-target="#navbar-mobile"><i class="icon-tree5"></i></a></li>
@@ -21,43 +21,6 @@
                     <img src="/backend/assets/images/flags/gb.png" class="position-left" alt="">
                     English
                 </a>
-            </li>
-
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="icon-bubbles4"></i>
-                    <span class="visible-xs-inline-block position-right">Messages</span>
-                    <span class="badge bg-warning-400">2</span>
-                </a>
-                
-                <div class="dropdown-menu dropdown-content width-350">
-                    <div class="dropdown-content-heading">
-                        Messages
-                        <ul class="icons-list">
-                            <li><a href="#"><i class="icon-compose"></i></a></li>
-                        </ul>
-                    </div>
-
-                    <ul class="media-list dropdown-content-body">
-                        <li class="media">
-                            <div class="media-left">
-                                <img src="/backend/assets/images/placeholder.jpg" class="img-circle img-sm" alt="">
-                            </div>
-
-                            <div class="media-body">
-                                <a href="#" class="media-heading">
-                                    <span class="text-semibold">James Alexander</span>
-                                    <span class="media-annotation pull-right">04:58</span>
-                                </a>
-
-                                <span class="text-muted">Contect's message</span>
-                            </div>
-                        </li>
-
-                    <div class="dropdown-content-footer">
-                        <a href="#" data-popup="tooltip" title="All messages"><i class="icon-menu display-block"></i></a>
-                    </div>
-                </div>
             </li>
 
             <li class="dropdown dropdown-user">
