--- a/app/views/admin/reservations/new.html.erb
+++ b/app/views/admin/reservations/new.html.erb
@@ -50,9 +50,9 @@
 
                 <div class="breadcrumb-line">
                     <ul class="breadcrumb">
-                        <li><a href="#"><i class="icon-home2 position-left"></i> Home</a></li>
-                        <li><a href="#">Order</a></li>
-                        <li><a href="#">Reservations Management</a></li>
+                        <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
+                        <li><%= link_to "Order, Reservation & Contact", admin_reservations_path %></li>
+                        <li><%= link_to "Reservations Management", admin_reservations_path %></li>
                         <li class="active">New Reservation</li>
                     </ul>
                 </div>
