--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -17,7 +17,7 @@
             <div class="col-lg-10">
               <%= f.file_field :image_url, class: "file-styled" %>
               <span class="help-block">Accepted formats: gif, png, jpg. Max file size 2Mb</span>
-              <%= image_tag(@restaurant.image_url.image_medium, alt: "Picture/logo's Manufacturer", class: "img-rouded") %>
+              <%= image_tag(@restaurant.image_url.image_medium, size: "200x200",alt: "Picture/logo's Manufacturer", class: "img-rouded") %>
             </div>
         </div>
         
