--- a/app/views/menu/index.html.erb
+++ b/app/views/menu/index.html.erb
@@ -22,8 +22,8 @@
         <div class="tabs-menu tabs-page">
             <div class="container">
                 <ul class="nav-tabs text-center" role="tablist">
-                    <% @category.each do |category| %>
-                        <% if category.id == @category.first.id %>
+                    <% @category_food.each do |category| %>
+                        <% if category.id == @category_food.first.id %>
                             <li class="active"><a href="#<%= category.id %>" role="tab" data-toggle="tab"><%= category.name %></a></li>
                         <% else %>
                             <li><a href="#<%= category.id %>" role="tab" data-toggle="tab"><%= category.name %></a></li>
@@ -35,8 +35,8 @@
         <div class="section-content">
             <div class="container">
                 <div class="tab-menu-content tab-content">
-                    <% @category.each do |category| %>
-                        <% if category.id == @category.first.id %>
+                    <% @category_food.each do |category| %>
+                        <% if category.id == @category_food.first.id %>
                             
                             <!-- CATEGORIES -->
                             <div class="tab-pane fade in active" id="<%= category.id %>">
