--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -25,6 +25,15 @@
               <%= f.text_area :description, rows: "5", cols: "5", placeholder: "Enter description of category.....", class: "form-control" %>
             </div>
         </div>
+            
+        <div class="form-group field">
+            <%= f.label "Is Drink", class: "col-lg-3 control-label" %>
+            <div class="col-lg-9">
+                <div class="form-group">
+                    <%= f.select(:is_drink, ['False', 'True'], {}, { :class => 'select' })%>
+                </div>
+            </div>
+        </div>
 
         <div class="text-right">
           <%= button_tag 'Save <i class="icon-plus22 position-right"></i>'.html_safe, class: "btn btn-primary"%>
