--- a/app/views/reservation/index.html.erb
+++ b/app/views/reservation/index.html.erb
@@ -79,7 +79,7 @@
                                     <td>
                                         <label for="email">Email</label>
                                         <div class="form-item">
-                                            <%= f.text_field :customer_email, placeholder: 'Email' %>
+                                            <%= f.text_field :customer_email, placeholder: 'Email (*)', required: true %>
                                         </div>
                                     </td>
                                 </tr>
