--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -10,7 +10,7 @@
 <li>
     <a href="#"><i class="icon-stack"></i> <span>Order, Reservation & Contact</span></a>
     <ul>
-        <li><a href="#">Orders Management</a></li>
+        <li><%= link_to "Orders Management", admin_customer_orders_path %></li>
         <li><%= link_to "Reservations Management", admin_reservations_path %></li>
         <li><%= link_to "Contacts Management", admin_contacts_path %></li>
     </ul>
