--- a/app/views/admin/customer_orders/index.html.erb
+++ b/app/views/admin/customer_orders/index.html.erb
@@ -91,7 +91,7 @@
                                     <td><%= item.phone %></td>
                                     <td><%= item.address  %></td>
                                     <td><%= item.company_name %></td>
-                                    <td><%= item.created_at.strftime("%d/%m/%Y - %I:%M") %></td>
+                                    <td><%= item.created_at.strftime("%d/%m/%Y - %H:%M") %></td>
                                     <td class="text-center">
                                         <ul class="icons-list">
                                             <li class="dropdown">
