--- a/app/views/admin/main/_navbar.html.erb
+++ b/app/views/admin/main/_navbar.html.erb
@@ -25,14 +25,18 @@
 
             <li class="dropdown dropdown-user">
                 <a class="dropdown-toggle" data-toggle="dropdown">
-                    <img src="/backend/assets/images/placeholder.jpg" alt="">
+                    <img src="/backend/assets/images/logo-PhoSG52.png" alt="">
                     <span>Manager</span>
                     <i class="caret"></i>
                 </a>
 
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li><a href="#"><i class="icon-user-plus"></i> My profile</a></li>
-                    <li><a href="#"><i class="icon-switch2"></i> Logout</a></li>
+                    <li>
+                        <% if user_signed_in? %>
+                            <%= link_to('<i class="icon-switch2"></i> Logout'.html_safe, destroy_user_session_path, :method => :delete) %>
+                        <%end%>
+					</li>
                 </ul>
             </li>
         </ul>
