finish contact, reservation, order

--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -11,8 +11,8 @@
     <a href="#"><i class="icon-stack"></i> <span>Order, Reservation & Contact</span></a>
     <ul>
         <li><%= link_to "Orders Management", admin_customer_orders_path %></li>
-        <li><%= link_to "Reservations Management", admin_reservations_path %></li>
-        <li><%= link_to "Contacts Management", admin_contacts_path %></li>
+        <li><%= link_to "Reservations Management", admin_customer_reservations_path %></li>
+        <li><%= link_to "Contacts Management", admin_customer_contacts_path %></li>
     </ul>
 </li>
 <li>
