--- a/app/views/checkout/index.html.erb
+++ b/app/views/checkout/index.html.erb
@@ -22,100 +22,110 @@
         <div class="container">
             <div class="row">
                 <div class="checkout">
-                    <!-- YOUR ORDER -->
-                    <div class="col-md-3">
-                        <div class="your-order">
-                            <h4 class="xmd text-capitalize">Your order</h4>
-                            <ul class="list-product">
-                                <% @order.line_items.each do |item| %>
-                                    <li>
-                                        <div class="product-image">
-                                            <img src="<%= item.menu.image_url.image_product_xsmall if item.menu.image_url? %>" alt="">
-                                        </div>
-                                        <div class="product-name">
-                                            <a href="#"><%= item.menu.name_1 %></a>
-                                        </div>
-                                        <hr/>
-                                        <div class="qty-wrap">
-                                            <span class="amount">Mount: <strong><%= item.total_item %></strong>/<%= item.quantity %> items</span>
-                                        </div>
-                                        <div class="product-remove">
-                                            <%= link_to "<i class='icon awe_close'></i>".html_safe , {controller: "cart", action: "index", do: 'remove_item', line_item_id: item.id } %>
-                                        </div>
+                    <% if @order.line_items.count > 0 %>
+                        <!-- YOUR ORDER -->
+                        <div class="col-md-3">
+                            <div class="your-order">
+                                
+                                <h4 class="xmd text-capitalize">Your order</h4>
+                                <ul class="list-product">
+                                    <% @order.line_items.each do |item| %>
+                                        <li>
+                                            <div class="product-image">
+                                                <img src="<%= item.menu.image_url.image_product_xsmall if item.menu.image_url? %>" alt="">
+                                            </div>
+                                            <div class="product-name">
+                                                <a href="#"><%= item.menu.name_1 %></a>
+                                            </div>
+                                            <hr/>
+                                            <div class="qty-wrap">
+                                                <span class="amount">Mount: <strong><%= item.total_item %></strong>/<%= item.quantity %> items</span>
+                                            </div>
+                                            <div class="product-remove">
+                                                <%= link_to "<i class='icon awe_close'></i>".html_safe , {controller: "cart", action: "index", do: 'remove_item', line_item_id: item.id } %>
+                                            </div>
+                                        </li>
+                                    <% end %>
+                                </ul>
+                                <ul class="list-price">
+                                    <li class="total">
+                                        Total
+                                        <span class="amount pull-right"><%= @order.total_order %></span>
                                     </li>
-                                <% end %>
-                            </ul>
-                            <ul class="list-price">
-                                <li class="total">
-                                    Total
+                                </ul>
+                                <div class="payment">
+                                    Payment
                                     <span class="amount pull-right"><%= @order.total_order %></span>
-                                </li>
-                            </ul>
-                            <div class="payment">
-                                Payment
-                                <span class="amount pull-right"><%= @order.total_order %></span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- END / YOUR ORDER -->
-
-
-                    <!-- CHECKOUT CONTENT -->
-                    <div class="col-md-9">
-                        <div class="checkout-content">
-                            
-                            <h4 class="xmd text-capitalize">Your Info</h4>
-                            <%= form_for @customer_order do |f| %>
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <label for="billing_first_name">
-                                            First Name <abbr class="required">*</abbr>
-                                        </label>
-                                        <%= f.text_field :first_name, required: true %>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <label for="billing_last_name">
-                                            Last Name <abbr class="required">*</abbr>
-                                        </label>
-                                        <%= f.text_field :last_name, required: true %>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <label for="billing_company">
-                                            Company Name
-                                        </label>
-                                        <%= f.text_field :company_name %>
-                                    </div>
-                                </div>
-                                
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <label for="billing_email">
-                                            Email Address <abbr class="required">*</abbr>
-                                        </label>
-                                        <%= f.text_field :email, required: true %>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <label for="billing_phone">
-                                            Phone <abbr class="required">*</abbr>
-                                        </label>
-                                        <%= f.text_field :phone, required: true %>
-                                    </div>
-                                </div>
+                        <!-- END / YOUR ORDER -->
     
-                                <h4 class="xmd text-capitalize">Delivery Info</h4>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <label for="billing_address_1" class="">
-                                            Address <abbr class="required">*</abbr>
-                                        </label>
-                                        <%= f.text_field :address, required: true %>
+    
+                        <!-- CHECKOUT CONTENT -->
+                        <div class="col-md-9">
+                            <div class="checkout-content">
+                                
+                                <h4 class="xmd text-capitalize">Your Info</h4>
+                                <%= form_for @customer_order do |f| %>
+                                    <div class="row">
+                                        <div class="col-md-3">
+                                            <label for="billing_first_name">
+                                                First Name <abbr class="required">*</abbr>
+                                            </label>
+                                            <%= f.text_field :first_name, required: true %>
+                                        </div>
+                                        <div class="col-md-3">
+                                            <label for="billing_last_name">
+                                                Last Name <abbr class="required">*</abbr>
+                                            </label>
+                                            <%= f.text_field :last_name, required: true %>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label for="billing_company">
+                                                Company Name
+                                            </label>
+                                            <%= f.text_field :company_name %>
+                                        </div>
                                     </div>
-                                </div>
-                                <%= f.submit "confirm order", class: "awe-btn awe-btn-3 awe-btn-default text-uppercase" %>
-                            <% end %>
+                                    
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <label for="billing_email">
+                                                Email Address <abbr class="required">*</abbr>
+                                            </label>
+                                            <%= f.text_field :email, required: true %>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <label for="billing_phone">
+                                                Phone <abbr class="required">*</abbr>
+                                            </label>
+                                            <%= f.text_field :phone, required: true %>
+                                        </div>
+                                    </div>
+        
+                                    <h4 class="xmd text-capitalize">Delivery Info</h4>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <label for="billing_address_1" class="">
+                                                Address <abbr class="required">*</abbr>
+                                            </label>
+                                            <%= f.text_field :address, required: true %>
+                                        </div>
+                                    </div>
+                                    <%= f.submit "confirm order", class: "awe-btn awe-btn-3 awe-btn-default text-uppercase" %>
+                                <% end %>
+                            </div>
                         </div>
-                    </div>
-                    <!-- END / CHECKOUT CONTENT -->
+                        <!-- END / CHECKOUT CONTENT -->
+                    <% else %>
+                        <div class="cart-submit text-center">
+                            <div class="form-actions">
+                                <h4>Your shopping cart is empty</h4>
+                                <%= link_to "SHOPPING NOW", {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-3 awe-btn-default text-uppercase"} %>
+                            </div>
+                        </div>
+                    <% end %>
                 </div>
             </div>
         </div>
