--- a/app/views/reservation/index.html.erb
+++ b/app/views/reservation/index.html.erb
@@ -21,7 +21,7 @@
     <section class="reservation section pd">
         <div class="divider divider-2"></div>
         <div class="reservation-content">
-            <%= form_for @reservation, url: admin_reservations_path do |f| %>
+            <%= form_for @customer_reservation do |f| %>
                 <div class="row">
                     <div class="col-md-6">
                         <table class="form-table table-first">
@@ -30,7 +30,7 @@
                                     <td colspan="2">
                                         <label for="date">Date</label>
                                         <div class="form-item">
-                                            <%= f.text_field :time_order, value: @reservation.time_order.strftime("%Y/%m/%d"), placeholder: 'yy/mm/dd' %>
+                                            <%= f.text_field :order_time, value: @customer_reservation.order_time.strftime("%Y/%m/%d"), placeholder: 'yy/mm/dd' %>
                                             <i class="icon awe_calendar"></i>
                                         </div>
                                     </td>
@@ -39,7 +39,7 @@
                                     <td class="t-time">
                                         <label for="time">Time</label>
                                         <div class="form-item">
-                                            <%= text_field_tag "time", @reservation.time_order.strftime("%I:%M"), placeholder: "hh:mm" %>
+                                            <%= text_field_tag "time", @customer_reservation.order_time.strftime("%I:%M"), placeholder: "hh:mm" %>
                                             <i class="icon awe_clock_2"></i>
                                         </div>
                                     </td>
@@ -48,7 +48,7 @@
                                     <td colspan="2">
                                         <label for="note">Note</label>
                                         <div class="form-item">
-                                            <%= f.text_field :note, placeholder: 'Your Note' %>
+                                            <%= f.text_field :note, placeholder: 'Your Note (*)', required: true %>
                                         </div>
                                     </td>
                                 </tr>
@@ -98,45 +98,15 @@
     </section>
     <!-- END / RESERVATION -->
 
-    <!-- TESTIMONIAL -->
-    <section id="testimonial" class="testimonial testimonial-1 section">
-        <!-- BACKGROUND -->
-        <div class="awe-parallax bg-6"></div>
-        <!-- END / BACKGROUND -->
-
-        <!-- OVERLAY -->
-        <div class="awe-overlay"></div>
-        <!-- END / OVERLAY -->
-
+    <!-- FOOTER -->
+    <footer id="footer" class="footer">
+        <div class="awe-color"></div>
         <div class="container">
-            <div class="testimonial-content">
-                <div class="icon-head">
-                    <i class="icon awe_quote_left"></i>
-                </div>
-
-                <blockquote>
-                    <p>It’s not about nutrients and calories.</p>
-                    <span>It’s about sharing. It’s about honesty.</span>
-                    <div class="test-footer text-right">
-                        <span class="sm">Robert Smith</span>
-                    </div>
-                </blockquote>
+            <div class="copyright text-center">
+                <%= render "home/footer" %>
             </div>
         </div>
-    </section>
-    <!-- END / TESTIMONIAL -->
-
-
-    <!-- FOOTER -->
-        <footer id="footer" class="footer">
-            <div class="divider divider-1 divider-color"></div>
-            <div class="awe-color"></div>
-            <div class="container">
-                <div class="copyright text-center">
-                    <%= render "home/footer" %>
-                </div>
-            </div>
-        </footer>
+    </footer>
     <!-- END / FOOTER -->
     
 
